--- a/src/styles/style/Navigation.css
+++ b/src/styles/style/Navigation.css
@@ -2,10 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0px 0px 1px 0px;
+  box-shadow: 0px 0px 3px 0px rgba(207, 207, 207, 0.893), 0px 0px 5px 0px;
   padding: 20px;
-  border-radius: 0px 0px 25px 25px;
+  border-radius: 0px 0px 10px 10px;
 }
 
 /* icon style */
